webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webproject
  labels:
    app: webapp
    deploymentconfig: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
        deploymentconfig: webapp
    spec:
      containers:
      - name: webapp
        image: image-registry.openshift-image-registry.svc:5000/webproject/webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: 50Mi
            cpu: 200m
          limits:
            memory: 80Mi
            cpu: 500m
      restartPolicy: Always
